--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "winmillwill/drupal-parse-composer",
+    "name": "drupal/parse-composer",
     "authors": [
         {
             "name": "Will Milton",
