Current implementation only supports php >= 5.4

--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
         ]
     },
     "require": {
+        "php": ">=5.4",
         "drupal/drupal": "7.*",
         "guzzle/guzzle": "*"
     },
