--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,7 @@ language: php
 php:
   - "5.5"
   - "5.4"
+before_install:
+  - composer self-update
 install:
   - composer install --no-interaction --prefer-source
