Initialize test repos outside of phpunit

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,4 @@ before_install:
   - composer self-update
 install:
   - composer install --no-interaction --prefer-source
+  - ./scripts/fixtures.sh
