--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ install:
   - composer install --no-interaction --prefer-source
   - ./scripts/fixtures.sh
 script:
-  - ./vendor/bin/phpspec
+  - ./vendor/bin/phpspec run
   - ./vendor/bin/phpunit
