--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,10 @@
                     "type": "zip"
                 }
             }
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/derhasi/phpcs-symfony2-standard.git"
         }
     ],
     "autoload": {
@@ -43,6 +47,7 @@
         "phpunit/phpunit": "4.4.*",
         "symfony/symfony": "2.3.*",
         "composer/composer": "dev-master",
-        "squizlabs/php_codesniffer": "2.*"
+        "squizlabs/php_codesniffer": "2.*",
+        "leaphub/phpcs-symfony2-standard": "dev-phpcs-version"
     }
 }
