--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
                 "version": "7.41.0",
                 "dist":
                 {
-                    "url": "http://ftp.drupal.org/files/projects/drupal-7.41.zip",
+                    "url": "https://ftp.drupal.org/files/projects/drupal-7.41.zip",
                     "type": "zip"
                 }
             }
