--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,11 @@
 language: php
 sudo: false
 php:
-  - 5.4
-  - 5.5
   - 5.6
 before_install:
   - composer self-update
 install:
-  - composer install --no-interaction --prefer-source
+  - composer install
   - ./scripts/fixtures.sh
 script:
   - ./vendor/bin/phpcs
