--- a/composer.json
+++ b/composer.json
@@ -29,10 +29,9 @@
         ]
     },
     "require": {
-        "php": ">=5.4",
+        "php": ">=5.6",
         "drupal/drupal": "7.*",
-        "guzzle/guzzle": "*",
-        "naneau/semver": "^0.0.7"
+        "guzzle/guzzle": "*"
     },
     "minimum-stability": "dev",
     "require-dev": {
