--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
     "require": {
         "php": ">=5.6",
         "drupal/drupal": "7.*",
-        "guzzle/guzzle": "*"
+        "guzzle/guzzle": "*",
+        "composer/semver": "^1.4"
     },
     "minimum-stability": "dev",
     "require-dev": {
