--- a/composer.json
+++ b/composer.json
@@ -29,9 +29,10 @@
         ]
     },
     "require": {
-        "php": ">=5.4",
+        "php": ">=5.6",
         "drupal/drupal": "7.*",
-        "guzzle/guzzle": "*"
+        "guzzle/guzzle": "*",
+        "composer/semver": "^1.4"
     },
     "minimum-stability": "dev",
     "require-dev": {
