--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,10 @@
             "type": "package",
             "package": {
                 "name": "drupal/drupal",
-                "version": "7.41.0",
+                "version": "7.43.0",
                 "dist":
                 {
-                    "url": "https://ftp.drupal.org/files/projects/drupal-7.41.zip",
+                    "url": "https://ftp.drupal.org/files/projects/drupal-7.43.zip",
                     "type": "zip"
                 }
             }
@@ -32,15 +32,15 @@
         "php": ">=5.6",
         "drupal/drupal": "7.*",
         "guzzle/guzzle": "*",
-        "composer/semver": "^1.4"
+        "composer/semver": "^1.4",
+        "igorw/get-in": "^1.0",
+        "composer/composer": "^1.0",
+        "leaphub/phpcs-symfony2-standard": "^2.0"
     },
-    "minimum-stability": "dev",
     "require-dev": {
         "phpspec/phpspec": "2.*",
         "phpunit/phpunit": "4.4.*",
-        "symfony/symfony": "2.3.*",
-        "composer/composer": "dev-master",
-        "squizlabs/php_codesniffer": "2.*",
-        "leaphub/phpcs-symfony2-standard": "dev-master"
+        "symfony/symfony": "^2.8",
+        "squizlabs/php_codesniffer": "2.*"
     }
 }
